tests/errors/missing_type.err
Parse error: Maybe type information is missing for function declaration?
1: foo(a) { a }
      ^
